
Wed Sep 15 19:09:52 PDT 1999
(Mandrake)

syncing kde code

-------------------------------------------------------------------------------

Thu Sep 16 12:04:54 PDT 1999
(Raster)

added patch to fix some behavior of raiselower

fixed pager starting up shaded problem

fixed iconfiicaton of thing son other desktops problem

-------------------------------------------------------------------------------

Thu Sep 16 16:33:08 EDT 1999
(Christian)

Don't snapshot group borders.


-------------------------------------------------------------------------------

Thu Sep 16 13:59:43 PDT 1999
(Raster)

fix speed fo menu sliding/scrolling and cleanup sliding/scrolling.

-------------------------------------------------------------------------------

Thu Sep 16 14:16:43 PDT 1999
(Mandrake)

a few kde fixes - now some of the taskbar stuff should work a little better.
still no names of windows / desktops / etc in there, but that'll all get
updated soon enough.

-------------------------------------------------------------------------------

Thu Sep 16 15:14:09 PDT 1999
(Raster)

play sounds for desktoop changing better :)

-------------------------------------------------------------------------------

Thu Sep 16 16:23:20 PDT 1999
(Mandrake)

taskbar now should update when you change focus.  next on to setting and
updating all the names.

-------------------------------------------------------------------------------

Thu Sep 16 16:41:47 PDT 1999
(Raster)

allow iconbox menu to pop up wiht any button presses ont he iconbox border :)

-------------------------------------------------------------------------------

Thu Sep 16 17:10:27 PDT 1999
(Mandrake)

task list updates on new windows and old windows dying off in kpanel now (oops)

-------------------------------------------------------------------------------

Thu Sep 16 18:36:16 PDT 1999
(Mandrake)

closer to having the client titles show up in the taskbar.  at least the
desktops show up in the pager now.  (more kde work)