@@ -75,7 +75,7 @@ KModuleList;
 
 static KModuleList *KModules = NULL;
 
-void 
+void
 KDE_ClientMessage(Window win, Atom atom, long data, Time timestamp)
 {
 
@@ -98,7 +98,7 @@ KDE_ClientMessage(Window win, Atom atom, long data, Time timestamp)
 
 }
 
-void 
+void
 KDE_ClientTextMessage(Window win, Atom atom, char *data)
 {
 
@@ -120,7 +120,7 @@ KDE_ClientTextMessage(Window win, Atom atom, char *data)
 
 }
 
-void 
+void
 KDE_SendMessagesToModules(Atom atom, long data)
 {
 
@@ -139,7 +139,7 @@ KDE_SendMessagesToModules(Atom atom, long data)
 
 }
 
-void 
+void
 KDE_UpdateFocusedWindow(void)
 {
 
@@ -172,7 +172,7 @@ KDE_UpdateFocusedWindow(void)
 
 }
 
-void 
+void
 KDE_NewWindow(EWin * ewin)
 {
 
@@ -181,13 +181,10 @@ KDE_NewWindow(EWin * ewin)
    if (!ewin)
       EDBUG_RETURN_;
 
-   if (!getSimpleHint(ewin->win, KDE_WIN_TITLE))
-     {
-	XChangeProperty(disp, ewin->win, KDE_WIN_TITLE,
-			KDE_WIN_TITLE, 8, PropModeReplace,
-			(unsigned char *)ewin->client.title,
-			strlen(ewin->client.title));
-     }
+   XChangeProperty(disp, ewin->win, KDE_WIN_TITLE,
+		   XA_STRING, 8, PropModeReplace,
+		   (unsigned char *)ewin->client.title,
+		   strlen(ewin->client.title) + 1);
    if (!(ewin->internal))
       KDE_SendMessagesToModules(KDE_MODULE_WIN_ADD, ewin->win);
 
@@ -195,7 +192,7 @@ KDE_NewWindow(EWin * ewin)
 
 }
 
-void 
+void
 KDE_RemoveWindow(EWin * ewin)
 {
 
@@ -211,7 +208,7 @@ KDE_RemoveWindow(EWin * ewin)
 
 }
 
-void 
+void
 KDE_AddModule(Window win)
 {
 
@@ -270,14 +267,11 @@ KDE_AddModule(Window win)
 		{
 		   if (!(lst[i]->internal))
 		     {
-			if (!getSimpleHint(lst[i]->win, KDE_WIN_TITLE))
-			  {
-			     XChangeProperty(disp, lst[i]->win, KDE_WIN_TITLE,
-					     KDE_WIN_TITLE, 8, PropModeReplace,
+			XChangeProperty(disp, lst[i]->win, KDE_WIN_TITLE,
+					XA_STRING, 8, PropModeReplace,
 					(unsigned char *)lst[i]->client.title,
-					     strlen(lst[i]->client.title));
+					strlen(lst[i]->client.title) + 1);
 
-			  }
 			KDE_ClientMessage(win, KDE_MODULE_WIN_ADD, lst[i]->win,
 					  CurrentTime);
 		     }
@@ -304,7 +298,7 @@ KDE_AddModule(Window win)
 
 }
 
-void 
+void
 KDE_RemoveModule(Window win)
 {
 
@@ -359,7 +353,7 @@ KDE_RemoveModule(Window win)
 
 }
 
-void 
+void
 KDE_Init(void)
 {
    /*
@@ -477,7 +471,7 @@ KDE_Init(void)
 
 }
 
-void 
+void
 KDE_Shutdown(void)
 {
 
@@ -504,7 +498,7 @@ KDE_Shutdown(void)
 
 }
 
-void 
+void
 KDE_ClientInit(Window win)
 {
 
@@ -537,7 +531,7 @@ KDE_ClientInit(Window win)
 
 }
 
-void 
+void
 KDE_ClientChange(Window win, XPropertyEvent * event)
 {
 
@@ -614,7 +608,7 @@ KDE_ClientChange(Window win, XPropertyEvent * event)
 
 }
 
-void 
+void
 KDE_GetDecorationHint(Window win, long *dechints)
 {
 
@@ -683,7 +677,7 @@ KDE_GetDecorationHint(Window win, long *dechints)
 
 }
 
-void 
+void
 KDE_CheckClientHints(Window win)
 {
 
@@ -706,7 +700,7 @@ KDE_CheckClientHints(Window win)
 
 }
 
-int 
+int
 KDE_WindowCommand(EWin * ewin, char *cmd)
 {
 
@@ -762,7 +756,7 @@ KDE_WindowCommand(EWin * ewin, char *cmd)
 
 }
 
-void 
+void
 KDE_Command(char *cmd, XClientMessageEvent * event)
 {
 
@@ -841,7 +835,7 @@ KDE_Command(char *cmd, XClientMessageEvent * event)
 
 }
 
-void 
+void
 KDE_ProcessClientMessage(XClientMessageEvent * event)
 {
 
@@ -895,7 +889,7 @@ KDE_ProcessClientMessage(XClientMessageEvent * event)
 
 }
 
-void 
+void
 KDE_ModuleAssert(Window win)
 {
 
@@ -909,7 +903,7 @@ KDE_ModuleAssert(Window win)
 
 }
 
-void 
+void
 KDE_PrepModuleEvent(Window win, KMessage msg)
 {
 
@@ -958,7 +952,7 @@ KDE_PrepModuleEvent(Window win, KMessage msg)
 
 }
 
-void 
+void
 KDE_SetRootArea(void)
 {
 
@@ -972,7 +966,7 @@ KDE_SetRootArea(void)
 
 }
 
-void 
+void
 KDE_SetNumDesktops(void)
 {
 
@@ -1004,7 +998,7 @@ KDE_SetNumDesktops(void)
    EDBUG_RETURN_;
 }
 
-void 
+void
 KDE_HintChange(Atom a)
 {
 
